--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crunchyroll Premium BD Shop</title>
   <style>
     body {
@@ -15,7 +15,7 @@
       background-color: #ff6600;
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 20px 0;
       font-size: 28px;
     }
     .container {
@@ -49,22 +49,15 @@
       width: 100%;
       cursor: pointer;
     }
-    .success {
-      background-color: #e0ffe0;
-      color: green;
-      padding: 10px;
-      margin-top: 10px;
-      text-align: center;
-      border: 1px solid green;
-      border-radius: 6px;
-      display: none;
+    button:hover {
+      background-color: #e65c00;
     }
   </style>
 </head>
 <body>
   <header>Crunchyroll Premium BD Shop</header>
   <div class="container">
-    <form action="https://usebasin.com/f/85ebacebeb56" method="POST" id="orderForm">
+    <form action="https://tally.so/r/wANOy0" method="POST">
       <h3>🧾 বিলিং এড্রেস</h3>
       <label>Full Name *</label>
       <input type="text" name="name" required>
@@ -79,22 +72,32 @@
       <input type="text" name="mobile" required>
 
       <h3>📦 প্যাকেজ সিলেকশন</h3>
+
       <label>Crunchyroll Share Account ⚡</label>
       <select name="package">
         <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
         <option value="2 Months Share – 200 TK">2 Months – 200 TK</option>
+        <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
+        <option value="6 Months Share – 600 TK">6 Months – 600 TK</option>
+        <option value="8 Months Share – 840 TK">8 Months – 840 TK</option>
       </select>
 
       <label>Crunchyroll Personal Profile ⚡</label>
       <select name="personal_package">
         <option value="1 Month Personal – 240 TK">1 Month – 240 TK</option>
         <option value="2 Months Personal – 480 TK">2 Months – 480 TK</option>
+        <option value="3 Months Personal – 720 TK">3 Months – 720 TK</option>
+        <option value="6 Months Personal – 1440 TK">6 Months – 1440 TK</option>
+        <option value="8 Months Personal – 1800 TK">8 Months – 1800 TK</option>
+        <option value="12 Months Personal – 2760 TK">12 Months – 2760 TK</option>
       </select>
 
       <label>Crunchyroll Primary Account ⚡</label>
       <select name="primary_package">
         <option value="1 Month Primary – 650 TK">1 Month – 650 TK</option>
         <option value="2 Months Primary – 1300 TK">2 Months – 1300 TK</option>
+        <option value="3 Months Primary – 1950 TK">3 Months – 1950 TK</option>
+        <option value="6 Months Primary – 3600 TK">6 Months – 3600 TK</option>
       </select>
 
       <h3>💳 পেমেন্ট তথ্য</h3>
@@ -112,33 +115,7 @@
       </select>
 
       <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-      <div class="success" id="successMessage">✅ অর্ডার সফলভাবে পাঠানো হয়েছে!</div>
     </form>
   </div>
-
-  <script>
-    const form = document.getElementById('orderForm');
-    const successMessage = document.getElementById('successMessage');
-
-    form.addEventListener('submit', function (e) {
-      e.preventDefault();
-      fetch(form.action, {
-        method: form.method,
-        body: new FormData(form),
-        headers: {
-          'Accept': 'application/json'
-        }
-      }).then(response => {
-        if (response.ok) {
-          successMessage.style.display = 'block';
-          form.reset();
-        } else {
-          alert('❌ দুঃখিত, অর্ডার পাঠানো যায়নি। আবার চেষ্টা করুন।');
-        }
-      }).catch(error => {
-        alert('❌ সিস্টেম এরর হয়েছে।');
-      });
-    });
-  </script>
 </body>
 </html>
