--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crunchyroll Premium BD Shop</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #fdfcfb;
+      background-color: #fdfcfb;
       margin: 0;
       padding: 0;
     }
@@ -26,8 +25,12 @@
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     }
-    h3 { color: #ff6600; }
-    label { font-weight: bold; }
+    h3 {
+      color: #ff6600;
+    }
+    label {
+      font-weight: bold;
+    }
     input, select {
       width: 100%;
       padding: 10px;
@@ -45,7 +48,9 @@
       width: 100%;
       cursor: pointer;
     }
-    button:hover { background-color: #e65c00; }
+    button:hover {
+      background-color: #e65c00;
+    }
   </style>
 </head>
 <body>
@@ -54,92 +59,81 @@
     <form id="orderForm">
       <h3>🧾 বিলিং এড্রেস</h3>
       <label>Full Name *</label>
-      <input type="text" name="name" required />
-      <label>Email *</label>
-      <input type="email" name="email" required />
-      <label>Street Address *</label>
-      <input type="text" name="address" required />
-      <label>Mobile Number *</label>
-      <input type="text" name="mobile" required />
+      <input type="text" name="name" required><label>Email *</label>
+  <input type="email" name="email" required>
 
-      <h3>📦 প্যাকেজ সিলেকশন</h3>
-      <label>Crunchyroll Share Account ⚡</label>
-      <select name="package">
-        <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
-        <option value="2 Months Share – 200 TK">2 Months – 200 TK</option>
-        <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
-      </select>
+  <label>Street Address *</label>
+  <input type="text" name="address" required>
 
-      <label>Crunchyroll Personal Profile ⚡</label>
-      <select name="personal_package">
-        <option value="1 Month Personal – 240 TK">1 Month – 240 TK</option>
-        <option value="2 Months Personal – 480 TK">2 Months – 480 TK</option>
-      </select>
+  <label>Mobile Number *</label>
+  <input type="text" name="mobile" required>
 
-      <label>Crunchyroll Primary Account ⚡</label>
-      <select name="primary_package">
-        <option value="1 Month Primary – 650 TK">1 Month – 650 TK</option>
-        <option value="2 Months Primary – 1300 TK">2 Months – 1300 TK</option>
-      </select>
+  <h3>📦 প্যাকেজ সিলেকশন</h3>
+  <label>Crunchyroll Share Account ⚡</label>
+  <select name="package">
+    <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
+    <option value="2 Months Share – 200 TK">2 Months – 200 TK</option>
+    <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
+    <option value="6 Months Share – 600 TK">6 Months – 600 TK</option>
+    <option value="8 Months Share – 840 TK">8 Months – 840 TK</option>
+  </select>
 
-      <h3>💳 পেমেন্ট তথ্য</h3>
-      <label>Payment Number *</label>
-      <input type="text" name="payment_number" required />
-      <label>Transaction ID *</label>
-      <input type="text" name="trans_id" required />
-      <label>Payment Method *</label>
-      <select name="payment_method" required>
-        <option value="Bkash">Bkash</option>
-        <option value="Nagad">Nagad</option>
-        <option value="Rocket">Rocket</option>
-      </select>
+  <label>Crunchyroll Personal Profile ⚡</label>
+  <select name="personal_package">
+    <option value="1 Month Personal – 240 TK">1 Month – 240 TK</option>
+    <option value="2 Months Personal – 480 TK">2 Months – 480 TK</option>
+    <option value="3 Months Personal – 720 TK">3 Months – 720 TK</option>
+    <option value="6 Months Personal – 1440 TK">6 Months – 1440 TK</option>
+    <option value="8 Months Personal – 1800 TK">8 Months – 1800 TK</option>
+    <option value="12 Months Personal – 2760 TK">12 Months – 2760 TK</option>
+  </select>
 
-      <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-    </form>
-  </div>
+  <label>Crunchyroll Primary Account ⚡</label>
+  <select name="primary_package">
+    <option value="1 Month Primary – 650 TK">1 Month – 650 TK</option>
+    <option value="2 Months Primary – 1300 TK">2 Months – 1300 TK</option>
+    <option value="3 Months Primary – 1950 TK">3 Months – 1950 TK</option>
+    <option value="6 Months Primary – 3600 TK">6 Months – 3600 TK</option>
+  </select>
 
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script>
+  <h3>💳 পেমেন্ট তথ্য</h3>
+  <label>Payment Number *</label>
+  <input type="text" name="payment_number" required>
+
+  <label>Transaction ID *</label>
+  <input type="text" name="trans_id" required>
+
+  <label>Payment Method *</label>
+  <select name="payment_method" required>
+    <option value="Bkash">Bkash</option>
+    <option value="Nagad">Nagad</option>
+    <option value="Rocket">Rocket</option>
+  </select>
+
+  <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
+</form>
+
+  </div>  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>  <script>
     emailjs.init("SsUmUorUm-BZG8LBY");
 
     document.getElementById("orderForm").addEventListener("submit", function(e) {
       e.preventDefault();
 
-      const form = this;
+      // Admin Email
+      emailjs.sendForm("service_z1714kq", "template_hp66tqp", this)
+        .then(() => console.log("Admin email sent"))
+        .catch((error) => console.error("Admin Email Error:", error));
 
-      // Send Email to Admin
-      emailjs.sendForm("service_z1714kq", "template_hp66tqp", form)
-        .then(() => {
-          console.log("Admin email sent.");
-        })
-        .catch((err) => {
-          console.error("Admin email error:", err);
-        });
-
-      // Send Email to Customer
-      emailjs.sendForm("service_z1714kq", "template_1z1lhlf", form)
-        .then(() => {
-          console.log("Customer confirmation sent.");
-        })
-        .catch((err) => {
-          console.error("Customer email error:", err);
-        });
-
-      // Submit to Google Sheets
-      fetch("https://script.google.com/macros/s/AKfycbw1dM0fMFT6EwPfWhb9nbI14xKjipFAgAn8lLrMZf-1mkzix5bsVz1m0XDYMGf_wXk/exec", {
-        method: "POST",
-        body: new FormData(form),
-      })
-        .then((res) => res.text())
-        .then(() => {
-          alert("✅ অর্ডার সফলভাবে গ্রহণ করা হয়েছে!");
-          form.reset();
-        })
-        .catch((err) => {
-          alert("❌ অর্ডার পাঠাতে সমস্যা হয়েছে।");
-          console.error("Google Sheet error:", err);
+      // Customer Email
+      emailjs.sendForm("service_z1714kq", "template_1z1lhlf", this)
+        .then(function(response) {
+          alert("✅ অর্ডার সফলভাবে সাবমিট হয়েছে! কিছুক্ষণের মধ্যে আপনি একাউন্ট তথ্য পাবেন।");
+          document.getElementById("orderForm").reset();
+          console.log("Customer Email Sent:", response);
+        }, function(error) {
+          alert("❌ অর্ডার ব্যর্থ হয়েছে! দয়া করে আবার চেষ্টা করুন।");
+          console.error("Customer Email Error:", error);
         });
     });
-  </script>
-</body>
+  </script></body>
 </html>
